Basic functions are working now
Basic functions are working now

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Shopping List Test</title>
-    </head>
-    <body>
-        <h1>Shopping List Test</h1>
-    </body>
+
+<head>
+    <title>Shopping List Test</title>
+</head>
+
+<body>
+    <h1>Shopping List Test</h1>
+    <ul></ul>
+
+    <script>
+        const electron = require('electron');
+        const {
+            ipcRenderer
+        } = electron;
+        const ul = document.querySelector('ul');
+
+        ipcRenderer.on('item:add', function(e, item) {
+            const li = document.createElement('li');
+            const itemText = document.createTextNode(item);
+            li.appendChild(itemText);
+            ul.appendChild(li);
+        });
+
+        ipcRenderer.on('item:clear', function(e, item) {
+            ul.innerHTML = null;
+        });
+
+        ul.addEventListener('dblclick', removeItem);
+
+        function removeItem(e) {
+            e.target.remove();
+        };
+    </script>
+</body>
+
 </html>
