--- a/addWindow.html
+++ b/addWindow.html
@@ -6,7 +6,6 @@
 </head>
 
 <body>
-    <h1>Test</h1>
     <form>
         <div>
             <label>Enter item name</label>
@@ -15,5 +14,20 @@
         <button type="submit">Add</button>
     </form>
 </body>
+<script>
+    const electron = require('electron');
+    const {
+        ipcRenderer
+    } = electron;
+
+    const form = document.querySelector('form');
+    form.addEventListener('submit', submitForm);
+
+    function submitForm(e) {
+        e.preventDefault();
+        const item = document.querySelector('#item').value;
+        ipcRenderer.send('item:add', item);
+    }
+</script>
 
 </html>
