Adds some style and moving to prod
- Adds materiliaze css;
- Adds NODE_ENV.

--- a/addWindow.html
+++ b/addWindow.html
@@ -3,16 +3,19 @@
 
 <head>
     <title>Adding New Item</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 <body>
-    <form>
-        <div>
-            <label>Enter item name</label>
-            <input type=text id="item" autofocus>
-        </div>
-        <button type="submit">Add</button>
-    </form>
+    <div class="container">
+        <form>
+            <div>
+                <label>Enter item name</label>
+                <input type=text id="item" autofocus>
+            </div>
+            <button class="btn waves-effect waves-light" type="submit">Add</button>
+        </form>
+    </div>
 </body>
 <script>
     const electron = require('electron');
