--- a/pages/addWindow.html
+++ b/pages/addWindow.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Adding New Item</title>    
+    <title>Adding New Item</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -31,11 +31,10 @@
         const item = document.querySelector('#item').value;
         ipcRenderer.send('item:add', item);
 
-        const fs = require('fs') 
-        fs.writeFile('Output.txt', item, (err) => { 
-            // In case of a error throw err. 
-            console.log(item)
-            if (err) throw err; 
+        const fs = require('fs')
+        const filePath = 'assets/items.txt';
+        fs.appendFileSync(filePath, item, (err) => {
+            if (err) throw err;
         });
     }
 </script>
