Electron require now in the main.js
Electron require now in the main.js

--- a/pages/addWindow.html
+++ b/pages/addWindow.html
@@ -17,8 +17,7 @@
         </form>
     </div>
 </body>
-<script>
-    const electron = require('electron');
+<script src='../main.js'>
     const {
         ipcRenderer
     } = electron;
