--- a/pages/mainWindow.html
+++ b/pages/mainWindow.html
@@ -14,8 +14,7 @@
     </nav>
     <ul></ul>
 
-    <script>
-        const electron = require('electron');
+    <script src='../main.js'>
         const {
             ipcRenderer
         } = electron;
@@ -61,5 +60,4 @@
         }
     </script>
 </body>
-
 </html>
