--- a/pages/mainWindow.html
+++ b/pages/mainWindow.html
@@ -14,7 +14,8 @@
     </nav>
     <ul></ul>
 
-    <script src='../main.js'>
+    <script>
+        const electron = require('electron');
         const {
             ipcRenderer
         } = electron;
