--- a/pages/mainWindow.html
+++ b/pages/mainWindow.html
@@ -45,10 +45,34 @@
         ul.addEventListener('dblclick', removeItem);
 
         function removeItem(e) {
+            let valueToDelete = e.target.textContent;
             e.target.remove();
             if (ul.children.length == 0) {
                 ul.className = '';
             }
+
+            var fs = require('fs')
+            fs.readFile('assets/items.txt', {encoding: 'utf-8'}, function(err, data) {
+                if (err) throw error;
+
+                let dataArray = data.split('\n');
+                let lastIndex = -1;
+
+                for (let index=0; index<dataArray.length; index++) {
+                    if (dataArray[index].includes(valueToDelete)) { 
+                        lastIndex = index;
+                        break; 
+                    }
+                }
+
+                dataArray.splice(lastIndex, 1);
+
+        
+                const updatedData = dataArray.join('\n');
+                fs.writeFile('assets/items.txt', updatedData, (err) => {
+                    if (err) throw err;
+                });
+            });
         };
 
         function addNewItem(item) {
