Adds flush command
Adds flush command to delete all data from file and todolist object

--- a/pages/mainWindow.html
+++ b/pages/mainWindow.html
@@ -37,7 +37,7 @@
         ipcRenderer.on('item:clear', function(e, item) {
             ul.className = '';
             ul.innerHTML = '';
-            // TODO delete all from file and object
+            e.sender.send('items:flush', item);
         });
 
         ul.addEventListener('dblclick', removeItem);
