--- a/pages/mainWindow.html
+++ b/pages/mainWindow.html
@@ -25,11 +25,11 @@
     ipcRenderer.on('items:upload', (event, data) => {
         let lastIndex = -1;
         let todoList = data._listOfItems;
-        data._listOfItems.forEach((elem) => {
-            addNewItem(elem);
-        });
+        for (todoItem in todoList) {
+            addNewItem(todoItem);
+        }
 
-        if (data._listOfItems.length == 0) {
+        if (data._listOfItems == {}) {
             changeHeaderTo(HEADER_NO_ELEMS);
         }
     })
@@ -39,11 +39,7 @@
     const MAIN_HEADER = 'Here we go:';
 
     ipcRenderer.on('item:add', (e, item) => {
-        if (item == null) {
-            alert('Item was already added to a shopping list!')
-        } else {
-            addNewItem(item);
-        }
+        addNewItem(item);
     });
 
     ipcRenderer.on('item:clear', (e, item) => {
@@ -69,6 +65,7 @@
         const li = document.createElement('li');
         const itemText = document.createTextNode(item);
         li.appendChild(itemText);
+        li.setAttribute("guid", )
         ul.appendChild(li);
         changeHeaderTo(MAIN_HEADER);
         ul.className = 'collection';
