--- a/pages/mainWindow.html
+++ b/pages/mainWindow.html
@@ -24,22 +24,22 @@
 
     ipcRenderer.on('items:upload', (event, data) => {
         let lastIndex = -1;
-        let todoList = data._listOfItems;
-        for (todoItem in todoList) {
-            addNewItem(todoItem);
-        }
-
-        if (data._listOfItems == {}) {
+        let todoList = data._dictOfItems;
+        if (data._dictOfItems == {}) {
             changeHeaderTo(HEADER_NO_ELEMS);
         }
+        
+        for (var guid in data._dictOfItems) {
+            addNewItem(guid, data._dictOfItems[guid]);
+        }        
     })
 
     const ul = document.querySelector('ul');
     const HEADER_NO_ELEMS = 'No Items To Display';
     const MAIN_HEADER = 'Here we go:';
 
-    ipcRenderer.on('item:add', (e, item) => {
-        addNewItem(item);
+    ipcRenderer.on('item:add', (e, guid, item) => {
+        addNewItem(guid, item);
     });
 
     ipcRenderer.on('item:clear', (e, item) => {
@@ -61,11 +61,11 @@
         }
     };
 
-    function addNewItem(item) {
+    function addNewItem(guid, item) {
         const li = document.createElement('li');
         const itemText = document.createTextNode(item);
         li.appendChild(itemText);
-        li.setAttribute("guid", )
+        li.setAttribute("guid", guid);
         ul.appendChild(li);
         changeHeaderTo(MAIN_HEADER);
         ul.className = 'collection';
