Deleting items fixed
- Deleting items fixed;
- Removed unused lib

--- a/pages/mainWindow.html
+++ b/pages/mainWindow.html
@@ -52,7 +52,7 @@
     ul.addEventListener('dblclick', removeItem);
 
     function removeItem(e) {
-        let valueToDelete = e.target.textContent;
+        let valueToDelete = e.target.getAttribute('guid');
         ipcRenderer.send('item:delete', valueToDelete);
         e.target.remove();
         if (ul.children.length == 0) {
