--- a/pages/mainWindow.html
+++ b/pages/mainWindow.html
@@ -21,18 +21,17 @@
     const {
         ipcRenderer
     } = electron;
+    const ul = document.querySelector('ul');
+    const HEADER_NO_ELEMS = 'No Items To Display';
+    const MAIN_HEADER = 'Here we go:';
 
     ipcRenderer.on('items:upload', (event, data) => {
         if (data._dictOfItems == {}) {
             changeHeaderTo(HEADER_NO_ELEMS);
         }
-
+        
         addListOfItems(data._dictOfItems)
     })
-
-    const ul = document.querySelector('ul');
-    const HEADER_NO_ELEMS = 'No Items To Display';
-    const MAIN_HEADER = 'Here we go:';
 
     ipcRenderer.on('item:add', (e, item) => {
         addNewItem(item);
@@ -42,14 +41,14 @@
         ul.className = '';
         ul.innerHTML = '';
         changeHeaderTo(HEADER_NO_ELEMS);
-        e.sender.send('items:flush');
+        e.sender.send('items:flush', item);
     });
 
     ul.addEventListener('dblclick', removeItem);
 
     function removeItem(e) {
-        let valueToDelete = e.target.getAttribute('guid');
-        ipcRenderer.send('item:delete', valueToDelete);
+        let guidToDelete = e.target.getAttribute('guid');
+        ipcRenderer.send('item:delete', guidToDelete);
         e.target.remove();
         if (ul.children.length == 0) {
             ul.className = '';
